--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @layer components {
   body{
-    @apply bg-[#fafafa] text-black
+    @apply bg-[#fafafa] text-black overflow-x-hidden;
   }
 }
 @tailwind utilities;
